# ripdis

./: .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  justfile  release
ci-tools/: build-debug-armv7  get_version  upload-bin
ipdisscan/: Cargo.toml  README.md
ipdisscan/src/: beacons.rs  broadcast.rs  conf.rs  gui.rs  lib.rs  listen.rs  main.rs  setup.rs  tui.rs  ui.rs
ipdisserver/: Cargo.toml  README.md
ipdisserver/src/: answers.rs  conf.rs  exec.rs  lib.rs  main.rs  server.rs  setup.rs  signature.rs
util/: crosscompile  devdeploy  release  release-arm32  release-arm64
