[package]
name = "ipdisserver"
version = "2.0.0-alpha.1"
edition = "2021"
description = "Answer to ipdisscan UDP packets with system informations."
authors = ["LanQuil <@lanquil:matrix.org>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "4.0", features = ['derive'] }
color-eyre = "0.6"
gethostname = "0.4"
serde_json = "1.0"
tracing = "0.1.29"
tracing-error = "0.2.0"
tracing-journald = "0.3"
tracing-subscriber = "0.3.1"

[dev-dependencies]
tracing-test = "0.2"
